--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
     <h id="about_us">About Us</h>
     <desc class="sep">Since 2005, our unique Czech restaurant concept has filled the gap between all the fast food restaurants and expensive so-called luxury restaurants.</desc>
     <ul class="button-list">
-      <li><a class="button button-img" href="https://goo.gl/maps/oNFr6HEc4pF2"><span class="fas fa-3x fa-sync-alt">i</span>3D virtual tour</a></li>
-      <li>TODO</li>
+      <li><a class="button button-img button-img-inline" href="https://goo.gl/maps/oNFr6HEc4pF2"><span class="fas fa-3x fa-sync-alt">i</span>3D virtual tour</a></li>
+      <li><a class="button" href="#concept">Restaurant concept</a></li>
+      <li><a class="button" href="#steaks">Our steaks</a></li>
+      <li><a class="button" href="#video-archives">Video archives</a></li>
     </ul>
-<!--     <section class="contentbalancer-none"> -->
-    <section>
+    <section class="contentbalancer-none">
       <h id="concept">Restaurant concept</h>
       <desc>STEAKGRILL® is a Czech concept developed by M. D. Klíma based on his twenty years of experience and work in American steakhouses. It differs from other restaurants in that it offers a wide range of popular international dishes in addition to steaks.</desc>
       <p>We make every meal to order—there is no pre-cooking. We use equipment specifically designed for each dish. We make steaks on a grill, liver on a griddle, and our cordon bleu is fried. Inquisitive guests will have the opportunity to peek in the kitchen to see how we make the meals.</p>
