--- a/index.html
+++ b/index.html
@@ -140,13 +140,20 @@
       <li><a class="button" href="#contact_form">Contact form</a></li>
       <li><a class="button" href="#questions">Frequently asked questions</a></li>
     </ul>
-    <dl>
-      <dt>Steakgrill Restaurant</dt>
+    <dl class="card card-heading">
+      <dt>Open Daily</dt>
       <dd>Open daily from 11 am to 10 pm, Fridays and Saturdays until 11 pm</dd>
+<!--
       <dd>Račiněves 189, 413 01 Roudnice nad Labem (<a href="https://www.google.com/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1" title="Go to Google Maps">map</a>)</dd>
       <dd><a href="mailto:restaurant@steakgrill.cz">restaurant@steakgrill.cz</a></dd>
       <dd var="inputvar-rezervace">n/a</dd>
+-->
     </dl>
+    <dl class="card card-heading">
+      <dt>Booking</dt>
+      <dd>Bookings are accepted only by telephone at <a href="tel:+420777330050">+420 777 330 050</a></dd>
+    </dl>
+<!--
     <dl>
       <dt>Billing details</dt>
       <dd>Jaroslav Honzajk</dd>
@@ -154,6 +161,7 @@
       <dd>Company ID: 19026811, VAT ID: CZ7008172666</dd>
       <dd><a href="mailto:jaroslav.honzajk@steakgrill.cz">jaroslav.honzajk@steakgrill.cz</a></dd>
     </dl>
+-->
     <section class="contentbalancer-none">
       <h id="news">Subscribe to our newsletter</h>
       <desc>We inform our registered customers about barbecue parties and other events that we organize. To subscribe, just fill in your email address. You can cancel your subscription at any time.</desc>
