--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <li><a class="button" href="#contact_form">Contact form</a></li>
       <li><a class="button" href="#questions">Frequently asked questions</a></li>
     </ul>
-    <dl class="card card-heading">
+    <dl class="card card-emph">
       <dt>Open Daily</dt>
       <dd>Open daily from 11 am to 10 pm, Fridays and Saturdays until 11 pm</dd>
 <!--
@@ -149,7 +149,7 @@
       <dd var="inputvar-rezervace">n/a</dd>
 -->
     </dl>
-    <dl class="card card-heading">
+    <dl class="card card-emph">
       <dt>Booking</dt>
       <dd>Bookings are accepted only by telephone at <a href="tel:+420777330050">+420 777 330 050</a></dd>
     </dl>
