--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <p class="logo"><img src="/files/preview/design/logo-white-bg.png" alt="Steakgrill logo" /></p>
   <section>
     <h id="jaroslav_honzajk">Jaroslav Honzajk</h>
-    <desc class="sep">Owner and Chef and a recognized Grilling and Broiling Expert</desc>
+    <desc>Owner and Chef and a recognized Grilling and Broiling Expert</desc>
     <ul class="photoswipe">
       <li><a href="/files/full/design/honzajk.jpg"><img src="/files/design/honzajk.jpg" alt="Jaroslav Honzajk"/></a></li>
     </ul>
@@ -18,7 +18,7 @@
       <li><a class="button button-img" href="https://www.facebook.com/Steakgrill/"><span class="fab fa-3x fa-facebook">i</span>Facebook (Czech)</a></li>
     </ul>
     <h id="about_us">About Us</h>
-    <desc class="sep">Since 2005, our unique Czech restaurant concept has filled the gap between all the fast food restaurants and expensive so-called luxury restaurants.</desc>
+    <desc>Since 2005, our unique Czech restaurant concept has filled the gap between all the fast food restaurants and expensive so-called luxury restaurants.</desc>
     <ul class="button-list">
       <li><a class="button button-img button-img-inline" href="https://goo.gl/maps/oNFr6HEc4pF2"><span class="fas fa-3x fa-sync-alt">i</span>3D virtual tour</a></li>
       <li><a class="button" href="#concept">Restaurant concept</a></li>
@@ -94,7 +94,7 @@
       </dl>
     </section>
     <h id="menu">Menu</h>
-    <desc class="sep">We make international dishes according to traditional recipes as people all over the world enjoy them.</desc>
+    <desc>We make international dishes according to traditional recipes as people all over the world enjoy them.</desc>
     <ul class="button-list">
       <li><a class="button button-img" href="/regular_menu"><span class="fas fa-3x fa-clipboard-list">i</span>Regular Menu</a></li>
       <li><a class="button button-img" href="/driks_list"><span class="fas fa-3x fa-mug-hot">i</span>Drinks List</a></li>
@@ -134,7 +134,7 @@
       <desc>Wine list not available</desc>
     </section>
     <h id="contact">Contact</h>
-    <desc class="sep">The restaurant is situated right next to the D8 highway intersection to the city of Roudnice nad Labem and Velvary (Exit 29)</desc>
+    <desc>The restaurant is situated right next to the D8 highway intersection to the city of Roudnice nad Labem and Velvary (Exit 29)</desc>
     <ul class="button-list">
       <li><a class="button" href="#news">Subscribe to our newsletter</a></li>
       <li><a class="button" href="#contact_form">Contact form</a></li>
