--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="en" ns="https://en.steakgrill.cz">
   <h id="wine_list" author="InternetGuru" ctime="2018-03-28">Wine List</h>
-  <desc class="noprint">The wine list is tailored for our restaurant by a leading Czech specialist. Acceptable pricing is a main criterion in addition to the dishes on offer. We offer French, Italian and Czech wines.</desc>
+  <desc>The wine list is tailored for our restaurant by a leading Czech specialist. Acceptable pricing is a main criterion in addition to the dishes on offer. We offer French, Italian and Czech wines.</desc>
   <section class="contenttoc">
     <h id="sparkling_wines_and_prosecco" title="Sparking wines and Prosecco…">Sparking wines and Prosecco</h>
     <desc>n/a</desc>
