--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -4,7 +4,7 @@
   <desc>Steakgrill is renowned for savory steaks and burgers however our salads and soups are second to none. One look at our menu says it all.</desc>
   <section class="contenttoc">
     <h class="afterimg" id="soups">Soups</h>
-    <desc class="noprint">We make four different soups throughout the day. The soups are Mike’s own recipes. You will not taste them anywhere else!</desc>
+    <desc>We make four different soups throughout the day. The soups are Mike’s own recipes. You will not taste them anywhere else!</desc>
     <dl class="card">
       <dt>Texas Chilli</dt>
       <dd>An American specialty. A thick spicy soup full of ground beef and pork, crushed tomatoes, jalapeños and beans.</dd>
