--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -5,6 +5,9 @@
   <section class="contenttoc">
     <h class="afterimg" id="soups">Soups</h>
     <desc>We make four different soups throughout the day. The soups are Mike’s own recipes. You will not taste them anywhere else!</desc>
+    <ul class="photoswipe">
+      <li><a href="/files/full/design/soups.jpg"><img src="/files/design/soups.jpg" alt="Soups"/></a></li>
+    </ul>
     <dl class="card">
       <dt>Texas Chilli</dt>
       <dd>An American specialty. A thick spicy soup full of ground beef and pork, crushed tomatoes, jalapeños and beans.</dd>
