--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -63,6 +63,9 @@
 
     <h class="afterimg break" id="salads">Salads</h>
     <desc>We offer a selection of world salads loved by our clientele. We recommend the salads with our popular grilled baguette with garlic butter.</desc>
+    <ul class="photoswipe">
+      <li><a href="/files/full/design/salads.jpg"><img src="/files/design/salads.jpg" alt="Salads"/></a></li>
+    </ul>
     <dl class="card">
       <dt>Cobb Salad</dt>
       <dd>One of our most popular salads. Iceberg lettuce, tomatoes, avocado, chicken, egg, blue cheese, grilled bacon, Romaine lettuce, savory Derby dressing, garlic baguette.</dd>
