--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -156,6 +156,9 @@
 
     <h class="afterimg break" id="grilled_steaks">Grilled Steaks</h>
     <desc>We grill premium meats over an open fire—always mellowed to room temperature. We recommend ordering our beef steaks cooked to medium-rare, but no more than medium. You can have your steak with a choice of sauce.</desc>
+    <ul class="photoswipe">
+      <li><a href="/files/full/design/salads.jpg"><img src="/files/design/salads.jpg" alt="Salads"/></a></li>
+    </ul>
     <dl class="card">
       <dt>Grilled Filet Mignon, 180 g</dt>
       <dd>Sirloin steak from a young bull (from a Czech farm), wrapped with dried bacon, mashed potatoes with leeks, bacon and butter, creamed spinach, grilled to the internal temperature that you prefer.</dd>
