--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -157,7 +157,7 @@
     <h class="afterimg break" id="grilled_steaks">Grilled Steaks</h>
     <desc>We grill premium meats over an open fire—always mellowed to room temperature. We recommend ordering our beef steaks cooked to medium-rare, but no more than medium. You can have your steak with a choice of sauce.</desc>
     <ul class="photoswipe">
-      <li><a href="/files/full/design/salads.jpg"><img src="/files/design/salads.jpg" alt="Salads"/></a></li>
+      <li><a href="/files/full/design/steaks.jpg"><img src="/files/design/steaks.jpg" alt="Steaks"/></a></li>
     </ul>
     <dl class="card">
       <dt>Grilled Filet Mignon, 180 g</dt>
