--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -260,7 +260,7 @@
 
     <h class="afterimg break" id="side_dishes">Side Dishes</h>
     <desc>You can choose a different side dish for each dish if you desire. If not sure which side dish to choose, ask the waiter.</desc>
-    <dl class="card meal oneline">
+    <dl class="card meal meal-oneline">
       <dt>Grilled baguette with garlic butter</dt>
       <dd class="price">CZK 39</dd>
       <dt>Mashed potatoes with leeks and bacon</dt>
@@ -291,7 +291,7 @@
 
     <h class="afterimg break" id="condiments_and_sauces">Condiments and Sauces</h>
     <desc>If you like diverse side dishes, choose one of our sauces, dips or condiments. We make all our sauces from scratch.</desc>
-    <dl class="card meal oneline">
+    <dl class="card meal meal-oneline">
       <dt>Freshly roasted almonds, 100 g</dt>
       <dd class="price">CZK 59</dd>
       <dt>Jalapeño peppers, sliced</dt>
