--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -4,7 +4,7 @@
   <desc>Steakgrill is renowned for savory steaks and burgers however our salads and soups are second to none. One look at our menu says it all.</desc>
   <section class="contenttoc">
     <h class="afterimg" id="soups">Soups</h>
-    <desc>We make four different soups throughout the day. The soups are Mike’s own recipes. You will not taste them anywhere else!</desc>
+    <desc>We make four different soups throughout the day. The soups are Mike’s own recipes.</desc>
     <ul class="photoswipe">
       <li><a href="/files/full/design/soups.jpg"><img src="/files/design/soups.jpg" alt="Soups"/></a></li>
     </ul>
