--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -8,26 +8,26 @@
     <ul class="photoswipe">
       <li><a href="/files/full/design/soups.jpg"><img src="/files/design/soups.jpg" alt="Soups"/></a></li>
     </ul>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Texas Chilli</dt>
       <dd>An American specialty. A thick spicy soup full of ground beef and pork, crushed tomatoes, jalapeños and beans.</dd>
       <dd>We nickname this soup the “prize-winning chilli”, as Mike won a first prize of $5,000 in the US with it. Recommended with a garlic baguette.</dd>
       <dt class="price">Price</dt>
       <dd class="price multiple"><span><span>small</span><span>CZK 55</span></span> <span><span>large</span><span>CZK 62</span></span> <span><span>double</span><span>CZK 109</span></span></dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Duck Broth</dt>
       <dd>Czech specialty. A thick bechamel soup with vegetables, duck giblets, wide noodles and bread dumplings.</dd>
       <dt class="price">Price</dt>
       <dd class="price multiple"><span><span>small</span><span>CZK 49</span></span> <span><span>large</span><span>CZK 55</span></span> <span><span>double</span><span>CZK 97</span></span></dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Beef Broth</dt>
       <dd>An all-night simmered broth with beef and marrow bones, vegetables, liver balls and thin noodles.</dd>
       <dt class="price">Price</dt>
       <dd class="price multiple"><span><span>small</span><span>CZK 49</span></span> <span><span>large</span><span>CZK 55</span></span></dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Soup of the Day</dt>
       <dd>You will find information about the soup of the day at the restaurant.</dd>
       <dt class="price">Price</dt>
@@ -36,25 +36,25 @@
 
     <h class="afterimg break" id="hamburgers_and_pasta">Hamburgers and Pasta</h>
     <desc>We make hamburgers the traditional way—big and juicy. We recommend pasta as a lighter alternative for less-hungry diners.</desc>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Chicken Burger</dt>
       <dd>Grilled marinated chicken steak, sesame-seed bun, pickles, iceberg lettuce, homemade BBQ sauce, fries, coleslaw.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 185</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Cheeseburger</dt>
       <dd>Grilled ground beef chuck (180 g), sesame-seed bun, homemade BBQ sauce, cheese, tomato, bacon, iceberg lettuce, onion, pickles, fries, coleslaw.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 239</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Chicken Penne Pomodoro</dt>
       <dd>Chicken breast strips (100 g), Italian pasta with tomato sauce and fresh basil with cream, grated Grana Padano cheese, olive oil.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 169</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Tagliatelle Funghi with Turkey Breast <a var="inputvar-term-sous-vide">sous-vide</a></dt>
       <dd>Italian wide noodles with a delicious sauce of forest mushrooms, turkey breast cooked <a var="inputvar-term-sous-vide">sous-vide</a> (vacuum cooked) to an internal temperature of 57°C, Grana Padano cheese, olive oil.</dd>
       <dt class="price">Price</dt>
@@ -66,19 +66,19 @@
     <ul class="photoswipe">
       <li><a href="/files/full/design/salads.jpg"><img src="/files/design/salads.jpg" alt="Salads"/></a></li>
     </ul>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Cobb Salad</dt>
       <dd>One of our most popular salads. Iceberg lettuce, tomatoes, avocado, chicken, egg, blue cheese, grilled bacon, Romaine lettuce, savory Derby dressing, garlic baguette.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 209</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Caesar Salad</dt>
       <dd>Popular Mexican salad from Tijuana. Romaine lettuce, croutons, grated Grana Padano cheese, Caesar dressing.</dd>
       <dt class="price">Price</dt>
       <dd class="price multiple"><span><span>small</span><span>CZK 79</span></span> <span><span>large</span><span>CZK 121</span></span></dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Caesar Salad with Grilled Chicken Steak</dt>
       <dd>Romaine lettuce, croutons, grated Grana Padano cheese, Caesar dressing, grilled marinated chicken breast.</dd>
       <dt class="price">Price</dt>
@@ -87,32 +87,32 @@
 
     <h class="afterimg break" id="frying_pan_wok">Frying Pan, Deep Fryer and Wok Dishes</h>
     <desc>We use authentic utensils for making international dishes. We always marinate duck and turkey meat, or inject it and cook it <a var="inputvar-term-sous-vide">sous-vide</a>.</desc>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Crispy Salmon</dt>
       <dd>A salmon steak cooked in olive oil with extra crispy skin, mashed potatoes with leeks and bacon, roasted cherry tomatoes, homemade dressing.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 249</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Duck Breast Fillet <a var="inputvar-term-sous-vide">Sous-vide</a></dt>
       <dd>Marinated duck breast with rosemary and olive oil, cooked <a var="inputvar-term-sous-vide">sous-vide</a>, then roasted. Served with potatoes au gratin, creamed spinach and lingonberry sauce.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 209</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Kung Pao Chicken</dt>
       <dd>According to an original Chinese recipe. Bits of chicken roasted in a Chinese wok with a dressing of soy sauce and sweet white wine, peanuts, chilli peppers, jasmine rice, carrots and raisins.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 189</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Buffalo Wings, 400 g</dt>
       <dd>A popular US dish. Chicken wings covered in our special homemade savory BBQ sauce, fries, coleslaw.</dd>
       <dd>Recommended with a garlic dip.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 185</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Chicken Cordon Bleu</dt>
       <dd>Slices of Burgundy ham and Gouda cheese enclosed in a chicken breast, breaded and fried golden, fries, coleslaw.</dd>
       <dd>Recommended with tartar sauce.</dd>
@@ -122,32 +122,32 @@
 
     <h class="afterimg break" id="grill_griddle">Grill and Griddle Dishes</h>
     <desc>We grill marinated first-class meat that has never been frozen. As with our steaks, our grilled meat is always mellowed to the ideal temperature (never straight out of the refrigerator).</desc>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Grilled Beef Liver</dt>
       <dd>Beef liver steaks grilled with onions and bacon, fries, coleslaw.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 169</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Grilled Pork Shashlik</dt>
       <dd>Marinated pork tenderloin grilled on a skewer with onions and bell peppers, finished with tomatoes and portobello mushrooms, fries, coleslaw.</dd>
       <dd>Recommended with BBQ dip.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 189</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Madagascar Grilled Pork Tenderloin</dt>
       <dd>Whole grilled pork tenderloin cut into medallions, creamy sauce with Madagascar pepper, potatoes au gratin, creamed spinach.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 249</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>BBQ Baby Back Ribs</dt>
       <dd>Pork ribs grilled in our homemade BBQ sauce, fries, garlic dressing.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 249</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Grill Mix</dt>
       <dd>Grilled pork tenderloin, beef liver, marinated chicken breast, bacon, mashed potatoes with leeks and bacon, sunny-side up egg, BBQ dip, portobello mushroom, onion, corn O’Brien.</dd>
       <dt class="price">Price</dt>
@@ -159,31 +159,31 @@
     <ul class="photoswipe">
       <li><a href="/files/full/design/steaks.jpg"><img src="/files/design/steaks.jpg" alt="Steaks"/></a></li>
     </ul>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Grilled Filet Mignon, 180 g</dt>
       <dd>Sirloin steak from a young bull (from a Czech farm), wrapped with dried bacon, mashed potatoes with leeks, bacon and butter, creamed spinach, grilled to the internal temperature that you prefer.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 398</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Grilled Pork Chop, 300 g</dt>
       <dd>Grilled pork rib chop with bones, marinated in a herb marinade, mashed potatoes with leeks and bacon, roasted cherry tomatoes, remoulade.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 229</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Chuck Flap, 300 g</dt>
       <dd>Grilled fine-cut steak from of the second-highest quality (USDA Choice) North American Black Angus cattle, served on a hotplate with roasted onions, portobello mushrooms and peppers, along with choice potatoes with rosemary and olive oil, remoulade.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 468</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Ribeye Steak, 300 g</dt>
       <dd>One of our most popular steaks. Tenderized steak from highly marbled short loin grilled to the internal temperature that you prefer, choice potatoes with rosemary and olive oil, creamy spinach, remoulade.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 529</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>New York Strip Steak au Poivre, 300 g</dt>
       <dd>A very popular US steak. Tenderized steak from top sirloin with a flavorful layer of fat, seasoned with freshly crushed black pepper, grilled to the internal temperature that you prefer, choice potatoes with rosemary and olive oil, creamy spinach, remoulade.</dd>
       <dt class="price">Price</dt>
@@ -192,43 +192,43 @@
 
     <h class="afterimg break" id="desserts">Desserts</h>
     <desc>We offer tried-and-tested restaurant desserts, made by ourselves according to authentic recipes. We make desserts to order, meaning they are always fresh and first-class.</desc>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Hot Chocolate Fondant</dt>
       <dd>Hot chocolate fondant with Angelato pistachio ice cream (we think it’s perfect) and sour cherries.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 119</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Bananas Foster</dt>
       <dd>Rum-flambé bananas with caramelized sugar and orange juice, cinnamon, walnuts, served with vanilla ice cream.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 89</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Chocolate Cake</dt>
       <dd>Traditional Prague chocolate cake with chocolate shavings and fresh whipped cream.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 69</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Fried Vanilla Ice Cream</dt>
       <dd>Ice cream wrapped in a crust of wafers, coconut and walnuts with a fruit sauce and homemade whipped cream.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 79</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Kaiserschmarrn</dt>
       <dd>Imperial scrambled pancake with warm strawberry sauce.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 69</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Crème Brûlée</dt>
       <dd>Baked egg yolk cream with real vanilla and a caramel crust.</dd>
       <dt class="price">Price</dt>
       <dd class="price">CZK 69</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Choice Ice Cream Scoops with Whipped Cream</dt>
       <dd>Chocolate, vanilla, strawberry, pistachio ice cream.</dd>
       <dt class="price">Price</dt>
@@ -237,22 +237,22 @@
 
     <h class="afterimg break" id="kids_dishes">Kids’ Dishes</h>
     <desc>We offer smaller servings for our youngest diners. These dishes are suitable for kids up to 12.</desc>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Pirate Treasure</dt>
       <dd>Freshly fried chicken breast nuggets served with fries and honey ketchup.</dd>
       <dd class="price">CZK 59</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Chicken Nuggets au Naturel</dt>
       <dd>Fresh chicken nuggets with mashed potatoes and honey ketchup.</dd>
       <dd class="price">CZK 59</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Pasta Pomodoro</dt>
       <dd>Pasta with tomatoes, garlic, basil and cream.</dd>
       <dd class="price">CZK 55</dd>
     </dl>
-    <dl class="card meal">
+    <dl class="meal">
       <dt>Fried Ice Cream Scoop</dt>
       <dd>Vanilla ice cream wrapped in a crust of wafers, coconut, walnuts and corn flakes, strawberry sauce, homemade whipped cream</dd>
       <dd class="price">CZK 59</dd>
@@ -260,7 +260,7 @@
 
     <h class="afterimg break" id="side_dishes">Side Dishes</h>
     <desc>You can choose a different side dish for each dish if you desire. If not sure which side dish to choose, ask the waiter.</desc>
-    <dl class="card meal meal-oneline">
+    <dl class="meal meal-oneline">
       <dt>Grilled baguette with garlic butter</dt>
       <dd class="price">CZK 39</dd>
       <dt>Mashed potatoes with leeks and bacon</dt>
@@ -291,7 +291,7 @@
 
     <h class="afterimg break" id="condiments_and_sauces">Condiments and Sauces</h>
     <desc>If you like diverse side dishes, choose one of our sauces, dips or condiments. We make all our sauces from scratch.</desc>
-    <dl class="card meal meal-oneline">
+    <dl class="meal meal-oneline">
       <dt>Freshly roasted almonds, 100 g</dt>
       <dd class="price">CZK 59</dd>
       <dt>Jalapeño peppers, sliced</dt>
