--- a/index.html
+++ b/index.html
@@ -134,12 +134,13 @@
       <desc>Wine list not available</desc>
     </section>
     <h id="contact">Contact</h>
-    <desc>n/a</desc>
-    <ul class="button-list">
+    <desc data-visibility="hp">The restaurant is situated right next to the D8 highway intersection to the city of Roudnice nad Labem and Velvary (Exit 29)</desc>
+    <ul class="button-list" data-visibility="hp">
       <li><a class="button" href="#news">Subscribe to our newsletter</a></li>
       <li><a class="button" href="#contact_form">Contact form</a></li>
       <li><a class="button" href="#questions">Frequently asked questions</a></li>
     </ul>
+    
     <dl class="card card-emph">
       <dt>Open Daily</dt>
       <dd>Open daily from 11 am to 10 pm, Fridays and Saturdays until 11 pm</dd>
