--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
       <desc>Wine list not available</desc>
     </section>
     <h id="contact">Contact</h>
-    <desc data-visibility="hp">The restaurant is situated right next to the D8 highway intersection to the city of Roudnice nad Labem and Velvary (Exit 29)</desc>
-    <ul class="button-list" data-visibility="hp">
+    <desc data-visibility="">The restaurant is situated right next to the D8 highway intersection to the city of Roudnice nad Labem and Velvary (Exit 29)</desc>
+    <ul class="button-list" data-visibility="">
       <li><a class="button" href="#news">Subscribe to our newsletter</a></li>
       <li><a class="button" href="#contact_form">Contact form</a></li>
       <li><a class="button" href="#questions">Frequently asked questions</a></li>
