--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </section>
     <h id="contact">Contact</h>
     <desc data-visibility="/">The restaurant is situated right next to the D8 highway intersection to the city of Roudnice nad Labem and Velvary (Exit 29)</desc>
-    <ul class="button-list" data-visibility="/">
+    <ul class="button-list" data-visibility="contact">
       <li><a class="button" href="#news">Subscribe to our newsletter</a></li>
       <li><a class="button" href="#contact_form">Contact form</a></li>
       <li><a class="button" href="#questions">Frequently asked questions</a></li>
