--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </section>
     <h id="contact">Contact</h>
     <desc data-visibility="/">The restaurant is situated right next to the D8 highway intersection to the city of Roudnice nad Labem and Velvary (Exit 29)</desc>
-    <p class="logo" data-visibility="contact">
+    <p class="logo" data-visibility="/contact">
       <img src="/files/preview/design/logo-white-bg.png" alt="Steakgrill logo" />
     </p>
     <ul class="button-list" data-visibility="/">
