--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <p var="contactform-basic"/>
       <h id="questions">Frequently asked questions</h>
       <desc>You can browse the list below before posting a question. It contains answers to the most frequently asked questions.</desc>
-      <dl>
+      <dl class="faq">
         <dt>Do you offer gift vouchers?</dt>
         <dd>Yes, we offer gift vouchers worth 500 CZK. Vouchers are valid for one year since the date of purchase. Vouchers are available at the bar or we’re happy to mail them to you.</dd>
         <dt>Do you accept food stamps?</dt>
