--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li><a href="/files/full/design/klima_honzajk.jpg"><img src="/files/design/klima_honzajk.jpg" alt="M. D. Klíma and Jaroslav Honzajk"/></a></li>
       </ul>
 <!--       <p>We make every meal to order—there is no pre-cooking. We use equipment specifically designed for each dish. We make steaks on a grill, liver on a griddle, and our cordon bleu is fried. Inquisitive guests will have the opportunity to peek in the kitchen to see how we make the meals.</p> -->
-      <dl>
+      <dl class="klima">
         <dt><img src="/files/thumbs/klima.png" alt="Michael Dobromil Klíma"/></dt>
         <dd><strong>Michael Dobromil Klíma</strong>—Founder of the STEAKGRILL® Concept</dd>
         <dd>Born June 23rd 1928, died October 15th 2011</dd>
