--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         <dt><img src="/files/thumbs/medium.png" alt="steak medium"/></dt>
         <dd>Medium</dd>
       </dl>
-      <dl class="figure propecenost">
+<!--       <dl class="figure propecenost">
         <dt><img src="/files/thumbs/medium-well.png" alt="steak medium well"/></dt>
         <dd>Medium well</dd>
-      </dl>
+      </dl> -->
       <p>Our meats are never frozen. We make sure the meat reaches room temperature before cooking. We tenderize all meat by gentle manual means (no chemicals).</p>
       <dl>
         <dt><q>Cooking is no hocus-pocus. The quality that goes into the pot is the quality that comes out of it.</q></dt>
