--- a/index.html
+++ b/index.html
@@ -78,23 +78,16 @@
       <p>We import mostly from farms in South America, usually from Uruguay, with high and medium degrees of marbling. We use meat from grain-fed animals or <em>USDA Prime</em> and <em>USDA Choice</em> quality class meats.</p>
       <h id="video-archives">Video archives</h>
       <desc>Our restaurant has been featured in the TV shows <em>Živě na Jedničce</em> and <em>Kluci v akci.</em> In these TV shows we showed, among other things, how to prepare our hamburger and our pork ribs.</desc>
-      <dl>
-        <dt>YouTube videos</dt>
-        <dd><a class="fa fa-play" href="//youtu.be/yp3vGZunX-E">2-minute</a> promotional video on Steakgrill restaurant.</dd>
-        <dd><a class="fa fa-play" href="//www.youtube.com/watch?v=I8PfnspoBnU">10-minute video</a> in which Jaroslav Honzajk introduces Steakgrill restaurant.</dd>
-        <dd><a class="fa fa-play" href="//www.youtube.com/watch?v=1QCLO8j9-lg">15-minute news report</a> on Steakgrill restaurant from Ústí TV.</dd>
-      </dl>
-      <dl>
-        <dt>ČT1 Grilling series</dt>
-        <dd>As part of the Grilling series in the TV show <em>Živě na Jedničce</em>, we showed viewers how to make hamburgers and salmon.</dd>
-        <dd><a class="fa fa-play" href="http://www.ceskatelevize.cz/ivysilani/10396278677-zive-na-jednicce/312292320120055/obsah/205905-serial-grilovani-mleteho-masa/">Series: Minced meat grilling (Czech)</a></dd>
-        <dd><a class="fa fa-play" href="http://www.ceskatelevize.cz/ivysilani/10396278677-zive-na-jednicce/312292320120057/obsah/206265-serial-grilovani/">Series: Grilling (Czech)</a></dd>
-      </dl>
-      <dl>
-        <dt><em>Kluci v akci</em> – “Living Legends of Czech Cuisine”</dt>
-        <dd>In the video, <a href="#concept">M. D. Klíma</a> shows you how to make pork tenderloin Parmentiér, Cobb salad, strip steak and Steakgrill pork ribs.</dd>
-        <dd><a class="fa fa-play" href="http://www.ceskatelevize.cz/porady/10084897100-kluci-v-akci/210562221900011/">Living Legends of Czech Cuisine – M. D. Klíma, 2010 (Czech)</a></dd>
-      </dl>
+      <ul>
+        <li><a href="//youtu.be/yp3vGZunX-E"><span class="fab fa-youtube">i</span>2-minute</a> promotional video on Steakgrill restaurant.</li>
+        <li><a href="//www.youtube.com/watch?v=I8PfnspoBnU"><span class="fab fa-youtube">i</span>10-minute video</a> in which Jaroslav Honzajk introduces Steakgrill restaurant.</li>
+        <li><a href="//www.youtube.com/watch?v=1QCLO8j9-lg"><span class="fab fa-youtube">i</span>15-minute news report</a> on Steakgrill restaurant from Ústí TV.</li>
+      </ul>
+      <ul>
+        <li><a href="http://www.ceskatelevize.cz/ivysilani/10396278677-zive-na-jednicce/312292320120055/obsah/205905-serial-grilovani-mleteho-masa/"><span class="fab fa-play-circle">i</span>Series: Minced meat grilling (Czech)</a></li>
+        <li><a href="http://www.ceskatelevize.cz/ivysilani/10396278677-zive-na-jednicce/312292320120057/obsah/206265-serial-grilovani/"><span class="fab fa-play-circle">i</span>Series: Grilling (Czech)</a></li>
+        <li><a href="http://www.ceskatelevize.cz/porady/10084897100-kluci-v-akci/210562221900011/"><span class="fab fa-play-circle">i</span>Living Legends of Czech Cuisine – M. D. Klíma, 2010 (Czech)</a></li>
+      </ul>
     </section>
     <h id="menu">Menu</h>
     <desc>We make international dishes according to traditional recipes as people all over the world enjoy them.</desc>
