--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
         <li><a href="//www.youtube.com/watch?v=1QCLO8j9-lg"><span class="fab fa-youtube">i</span>15-minute news report</a> on Steakgrill restaurant from Ústí TV.</li>
       </ul>
       <ul>
-        <li><a href="http://www.ceskatelevize.cz/ivysilani/10396278677-zive-na-jednicce/312292320120055/obsah/205905-serial-grilovani-mleteho-masa/"><span class="fab fa-play-circle">i</span>Series: Minced meat grilling (Czech)</a></li>
-        <li><a href="http://www.ceskatelevize.cz/ivysilani/10396278677-zive-na-jednicce/312292320120057/obsah/206265-serial-grilovani/"><span class="fab fa-play-circle">i</span>Series: Grilling (Czech)</a></li>
-        <li><a href="http://www.ceskatelevize.cz/porady/10084897100-kluci-v-akci/210562221900011/"><span class="fab fa-play-circle">i</span>Living Legends of Czech Cuisine – M. D. Klíma, 2010 (Czech)</a></li>
+        <li><a href="http://www.ceskatelevize.cz/ivysilani/10396278677-zive-na-jednicce/312292320120055/obsah/205905-serial-grilovani-mleteho-masa/"><span class="fas fa-play-circle">i</span>Series: Minced meat grilling (Czech)</a></li>
+        <li><a href="http://www.ceskatelevize.cz/ivysilani/10396278677-zive-na-jednicce/312292320120057/obsah/206265-serial-grilovani/"><span class="fas fa-play-circle">i</span>Series: Grilling (Czech)</a></li>
+        <li><a href="http://www.ceskatelevize.cz/porady/10084897100-kluci-v-akci/210562221900011/"><span class="fas fa-play-circle">i</span>Living Legends of Czech Cuisine – M. D. Klíma, 2010 (Czech)</a></li>
       </ul>
     </section>
     <h id="menu">Menu</h>
