--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
       <h id="video-archives">Video archives</h>
       <desc>Our restaurant has been featured in the TV shows <em>Živě na Jedničce</em> and <em>Kluci v akci.</em> In these TV shows we showed, among other things, how to prepare our hamburger and our pork ribs.</desc>
       <ul>
-        <li><a href="//youtu.be/yp3vGZunX-E"><span class="fab fa-2x fa-youtube">i</span>2-minute</a> promotional video on Steakgrill restaurant.</li>
-        <li><a href="//www.youtube.com/watch?v=I8PfnspoBnU"><span class="fab fa-2x fa-youtube">i</span>10-minute video</a> in which Jaroslav Honzajk introduces Steakgrill restaurant.</li>
-        <li><a href="//www.youtube.com/watch?v=1QCLO8j9-lg"><span class="fab fa-2x fa-youtube">i</span>15-minute news report</a> on Steakgrill restaurant from Ústí TV.</li>
+        <li><a href="//youtu.be/yp3vGZunX-E"><span class="fab fa-2x fa-youtube">i</span>Promotional video on Steakgrill restaurant.</a></li>
+        <li><a href="//www.youtube.com/watch?v=I8PfnspoBnU"><span class="fab fa-2x fa-youtube">i</span>Video in which Jaroslav Honzajk introduces Steakgrill restaurant.</a></li>
+        <li><a href="//www.youtube.com/watch?v=1QCLO8j9-lg"><span class="fab fa-2x fa-youtube">i</span>Video of Steakgrill restaurant from Ústí TV.</a></li>
       </ul>
       <ul>
         <li><a href="http://www.ceskatelevize.cz/ivysilani/10396278677-zive-na-jednicce/312292320120055/obsah/205905-serial-grilovani-mleteho-masa/"><span class="fas fa-2x fa-play-circle">i</span>Series: Minced meat grilling (Czech)</a></li>
