--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
 <!--       <p>We make every meal to order—there is no pre-cooking. We use equipment specifically designed for each dish. We make steaks on a grill, liver on a griddle, and our cordon bleu is fried. Inquisitive guests will have the opportunity to peek in the kitchen to see how we make the meals.</p> -->
       <dl class="klima">
         <dt><img src="/files/thumbs/klima.png" alt="Michael Dobromil Klíma"/></dt>
+        <dd><q>Early to bed, early to rise, work like hell and advertise!</q></dd>
         <dd><strong>Michael Dobromil Klíma</strong>—Founder of the STEAKGRILL® Concept</dd>
         <dd>Born June 23rd 1928, died October 15th 2011</dd>
         <dd><a href="https://www.hostovka.cz/?clanky=zivotopis">Mike’s life story (Czech)</a>, an article in <a href="https://www.hostovka.cz">Mike’s imaginary university for guests (Czech)</a></dd>
-        <dt><q>Early to bed, early to rise, work like hell and advertise!</q></dt>
-        <dd>Mike’s original life motto</dd>
       </dl>
       <h id="steaks">Our steaks</h>
       <desc>We make beef steaks from aged meat with a high degree of marbling. We roast our steaks accurately as you request—from rare to well done. If you are not sure our staff is always ready to advise you.</desc>
