--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -5,7 +5,7 @@
   <section class="contenttoc">
     <h id="alcoholic" title="Alcoholic beverages, beer…">Alcoholic beverages, beer</h>
     <desc>n/a</desc>
-    <dl class="card oneline">
+    <dl class="meal meal-oneline">
       <dt>Carling British Cider, Cherry <span>0.3 L</span></dt>
       <dd class="price">CZK 45</dd>
       <dd>4% alc. (bottled)</dd>
@@ -33,7 +33,7 @@
     <desc>n/a</desc>
     <!--     <desc>U obsluhy je možné si vyžádat lístek míchaních nápojů, na kterém jsou jednotlivé
 nápoje detailněji popsány včetně složení.</desc> -->
-    <dl class="card oneline">
+    <dl class="meal meal-oneline">
       <dt>Crodino Spritz</dt>
       <dd class="price">CZK 60</dd>
       <dd>Crodino, soda, slice of orange, ice</dd>
@@ -57,7 +57,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
 
     <h id="aperitifs" title="Aperitifs, sparkling wines…">Apéritifs, sparkling wines</h>
     <desc>n/a</desc>
-    <dl class="card oneline">
+    <dl class="meal meal-oneline">
       <dt>Cinzano Bianco <span>0.1 L</span></dt>
       <dd class="price">CZK 45</dd>
       <dt>Campari <span>0.05 L</span></dt>
@@ -76,7 +76,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
 
     <h id="soft_drinks" class="break" title="Soft drinks…">Soft drinks</h>
     <desc>n/a</desc>
-    <dl class="card oneline">
+    <dl class="meal meal-oneline">
       <dt>Homemade lemonade</dt>
       <dd class="price">CZK 58</dd>
       <dt>Homemade raspberry lemonade</dt>
@@ -87,7 +87,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Fanta orange <span>0.33 L</span></dt>
       <dd class="price">CZK 38</dd>
     </dl>
-    <dl class="card oneline">
+    <dl class="meal meal-oneline">
       <dt>Sprite <span>0.33 L</span></dt>
       <dd class="price">CZK 38</dd>
       <dt>Kinley tonic <span>0.25 L</span></dt>
@@ -101,7 +101,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">CZK 26</dd>
       <dd>(sparkling, mild, still)</dd>
     </dl>
-    <dl class="card oneline">
+    <dl class="meal meal-oneline">
       <dt>Red Bull <span>0.25 L</span></dt>
       <dd class="price">CZK 60</dd>
       <dt>Römerquelle <span>0.33 L</span></dt>
@@ -119,7 +119,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
 
     <h id="hot_drinks" class="break" title="Hot drinks, coffee, tea…">Hot drinks, coffee, tea</h>
     <desc>n/a</desc>
-    <dl class="card oneline">
+    <dl class="meal meal-oneline">
       <dt>Espresso</dt>
       <dd class="price">CZK 37</dd>
       <dt>Espresso lungo</dt>
@@ -131,7 +131,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Café Vienna</dt>
       <dd class="price">CZK 43</dd>
     </dl>
-    <dl class="card oneline">
+    <dl class="meal meal-oneline">
       <dt>Wiener Melange</dt>
       <dd class="price">CZK 43</dd>
       <dt>Eggnog latté</dt>
@@ -141,7 +141,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Iced coffee with ice cream</dt>
       <dd class="price">CZK 70</dd>
     </dl>
-    <dl class="card oneline">
+    <dl class="meal meal-oneline">
       <dt>Montecelio loose teas</dt>
       <dd class="price">CZK 47</dd>
       <dd>(fruit, black – Earl Grey, rooibos, green)</dd>
@@ -160,7 +160,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
 
     <h id="rums" class="break" title="Rums and spirits…">Rums and spirits</h>
     <desc>Rums and spirits come in servings of 0.4 cL. For more information on our rums, please ask the waiter for a Rum List.</desc>
-    <dl class="card oneline">
+    <dl class="meal meal-oneline">
       <dt>Diplomático Mantuano</dt>
       <dd class="price">CZK 80</dd>
       <dt>Diplomático Reserva Exclusiva</dt>
@@ -178,7 +178,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Angostura 5 YO</dt>
       <dd class="price">CZK 60</dd>
     </dl>
-    <dl class="card oneline">
+    <dl class="meal meal-oneline">
       <dt>Angostura 7 YO</dt>
       <dd class="price">CZK 80</dd>
       <dt>Kraken Black Spiced</dt>
@@ -199,7 +199,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
 
     <h id="spirits" class="break" title="Spirits">Spirits</h>
     <desc>We offer generally known spirits; each comes in servings of 0.4 cL.</desc>
-    <dl class="card oneline">
+    <dl class="meal meal-oneline">
       <dt>Captain Morgan</dt>
       <dd class="price">CZK 50</dd>
       <dt>Božkov Tuzemský</dt>
@@ -211,7 +211,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Tanquearay</dt>
       <dd class="price">CZK 60</dd>
     </dl>
-    <dl class="card oneline">
+    <dl class="meal meal-oneline">
       <dt>Fernet / Fernet Citrus</dt>
       <dd class="price">CZK 35</dd>
       <dt>Becherovka</dt>
@@ -221,7 +221,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Brandy eggnog</dt>
       <dd class="price">CZK 30</dd>
     </dl>
-    <dl class="card oneline">
+    <dl class="meal meal-oneline">
       <dt>Tullamore Dew</dt>
       <dd class="price">CZK 60</dd>
       <dt>Jack Daniel's Honey</dt>
