--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<body xml:lang="en" ns="https://en.steakgrill.cz">
+<body xml:lang="en" ns="https://en.steakgrill.cz" var="cms-link@data-link">
   <h id="driks_list" author="InternetGuru" ctime="2018-03-28">Drinks List</h>
   <desc>Our homemade lemonades made from fresh fruit refresh on a hot day, and our homemade baked teas warm up in bitter weather. Beer lovers will enjoy our Pilsner and occasional offers of micro-brewed beers, in addition to a wide range of quality rums.</desc>
   <section class="contenttoc">
